[package]
name = "forward-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Proxy Authentication Docker Test"]
description = "A forward proxy that handles authentication for upstream proxies"
license = "MIT"
repository = "https://github.com/zexa/forward-proxy"
readme = "README.md"
keywords = ["proxy", "authentication", "selenium", "webdriver", "geckodriver"]
categories = ["network-programming", "web-programming::http-client", "authentication", "web-programming"]

# Declare both a binary and a library
[[bin]]
name = "forward-proxy"
path = "src/main.rs"

[lib]
name = "forward_proxy"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1.0"
bytes = "1.5.0"
base64 = "0.21.7"
clap = { version = "4.5.2", features = ["derive", "env"] }
anyhow = "1.0.80"
prometheus = "0.13.4"
parking_lot = "0.12.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
